--- a/vue-nctulib/package.json
+++ b/vue-nctulib/package.json
@@ -14,13 +14,16 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1",
-    "lodash": "^4.17.4",
+    "bootstrap-vue": "^1.0.0-beta.9",
     "vue": "^2.4.2",
+    "vue-awesome": "^2.3.3",
+    "vue-debug": "0.0.1",
+    "vue-material": "^0.7.5",
+    "vue-observe-visibility": "^0.3.1",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
-    "vues": "^0.5.20"
+    "vues": "^0.5.20",
+    "vuex": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
