--- a/vue-nctulib/package.json
+++ b/vue-nctulib/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^1.0.0-beta.9",
+    "style-loader": "^0.18.2",
     "vue": "^2.4.2",
     "vue-awesome": "^2.3.3",
     "vue-debug": "0.0.1",
@@ -32,6 +33,7 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
